force-app/main/default/objects/Mail__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Address</label>
    <referenceTo>Inhabitant__c</referenceTo>
    <relationshipLabel>Mail (Address)</relationshipLabel>
    <relationshipName>Mail_Address</relationshipName>
    <type>Lookup</type>
</CustomField>