force-app/main/default/objects/Mail__c/fields/Addressed_To__c.field-meta.xml
<CustomField>
    <fullName>Addressed_To__c</fullName>
    <formula>Inhabitant__r.Inhabitant_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Addressed To</label>
    <type>Text</type>
</CustomField>