force-app/main/default/objects/Mail__c/fields/Addressed_to_real__c.field-meta.xml
<CustomField>
    <fullName>Addressed_to_real__c</fullName>
    <formula>Inhabitant__r.Contact__r.FirstName &amp; &quot; &quot; &amp; Inhabitant__r.Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Addressed to:</label>
    <type>Text</type>
</CustomField>