force-app/main/default/objects/Mail__c/fields/Addressee_Name__c.field-meta.xml
<CustomField>
    <fullName>Addressee_Name__c</fullName>
    <formula>Addressee__r.Contact__r.FirstName &amp; &apos; &apos; &amp;  Addressee__r.Contact__r.LastName</formula>
    <label>Addressee Name</label>
    <type>Text</type>
</CustomField>