force-app/main/default/objects/Mail__c/fields/Amount_Insured__c.field-meta.xml
<CustomField>
    <fullName>Amount_Insured__c</fullName>
    <description>Stores the Dollar Amount a Package is insured for.</description>
    <label>Amount_Insured</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>