force-app/main/default/objects/Mail__c/fields/Assigned__c.field-meta.xml
<CustomField>
    <fullName>Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned</label>
    <referenceTo>Route__c</referenceTo>
    <relationshipLabel>Mails</relationshipLabel>
    <relationshipName>Mails</relationshipName>
    <type>Lookup</type>
</CustomField>