force-app/main/default/objects/Mail__c/fields/Assigned_Route__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Route__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Route</label>
    <referenceTo>Route__c</referenceTo>
    <relationshipLabel>Mail</relationshipLabel>
    <relationshipName>Mail</relationshipName>
    <type>Lookup</type>
</CustomField>