force-app/main/default/objects/Mail__c/fields/Claim_Paid_Out__c.field-meta.xml
<CustomField>
    <fullName>Claim_Paid_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Claim Paid Out</label>
    <type>Checkbox</type>
</CustomField>