force-app/main/default/objects/Mail__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Inhabitant__c</referenceTo>
    <relationshipLabel>Mail</relationshipLabel>
    <relationshipName>Mail</relationshipName>
    <type>Lookup</type>
</CustomField>