force-app/main/default/objects/Mail__c/fields/Delivery__c.field-meta.xml
<CustomField>
    <fullName>Delivery__c</fullName>
    <label>Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Not Delivered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>