force-app/main/default/objects/Mail__c/fields/Delivery_Address__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Address</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Mail</relationshipLabel>
    <relationshipName>Mail</relationshipName>
    <type>Lookup</type>
</CustomField>