force-app/main/default/objects/Mail__c/fields/Destination_Address__c.field-meta.xml
<CustomField>
    <fullName>Destination_Address__c</fullName>
    <formula>Addressee__r.Address__r.Mailing_Address__c</formula>
    <label>Destination Address</label>
    <type>Text</type>
</CustomField>