force-app/main/default/objects/Mail__c/fields/Fragile__c.field-meta.xml
<CustomField>
    <fullName>Fragile__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check the box if the package contains fragile contents.</description>
    <label>Fragile</label>
    <type>Checkbox</type>
</CustomField>