force-app/main/default/objects/Mail__c/fields/Height_Inches__c.field-meta.xml
<CustomField>
    <fullName>Height_Inches__c</fullName>
    <description>How tall  the mail is in inches.</description>
    <inlineHelpText>How tall is the mail in inches?</inlineHelpText>
    <label>Height (Inches)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>