force-app/main/default/objects/Mail__c/fields/Insurance__c.field-meta.xml
<CustomField>
    <fullName>Insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if this piece of mail has insurance. Unchecked if it does not.</description>
    <inlineHelpText>Checked if this piece of mail has insurance. Unchecked if it does not.</inlineHelpText>
    <label>Insurance</label>
    <type>Checkbox</type>
</CustomField>