force-app/main/default/objects/Mail__c/fields/Is_Fragile__c.field-meta.xml
<CustomField>
    <fullName>Is_Fragile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Fragile</label>
    <type>Checkbox</type>
</CustomField>