force-app/main/default/objects/Mail__c/fields/Mail_Handler__c.field-meta.xml
<CustomField>
    <fullName>Mail_Handler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mail Handler</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Mail</relationshipName>
    <type>Lookup</type>
</CustomField>