force-app/main/default/objects/Mail__c/fields/Payout_Approved__c.field-meta.xml
<CustomField>
    <fullName>Payout_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payout Approved</label>
    <type>Checkbox</type>
</CustomField>