force-app/main/default/objects/Mail__c/fields/Payout_Status__c.field-meta.xml
<CustomField>
    <fullName>Payout_Status__c</fullName>
    <label>Payout Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Payout Requested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>