force-app/main/default/objects/Mail__c/fields/Shipped__c.field-meta.xml
<CustomField>
    <fullName>Shipped__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shipped</label>
    <type>Checkbox</type>
</CustomField>