force-app/main/default/objects/Mail__c/fields/Weight_In_lbs__c.field-meta.xml
<CustomField>
    <fullName>Weight_In_lbs__c</fullName>
    <description>The weight of the mail in pounds.</description>
    <inlineHelpText>How much does the mail weigh in pounds?</inlineHelpText>
    <label>Weight (In lbs.)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>