force-app/main/default/objects/Mail__c/fields/Weight_lbs__c.field-meta.xml
<CustomField>
    <fullName>Weight_lbs__c</fullName>
    <label>Weight (lbs.)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>