force-app/main/default/objects/Mail__c/fields/Width_in__c.field-meta.xml
<CustomField>
    <fullName>Width_in__c</fullName>
    <label>Width (in.)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>