force-app/main/default/objects/Mail__c/fields/Width_Inches__c.field-meta.xml
<CustomField>
    <fullName>Width_Inches__c</fullName>
    <description>The width of the mail in inches.</description>
    <inlineHelpText>What is the width of the mail in inches?</inlineHelpText>
    <label>Width (Inches)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>