force-app/main/default/objects/Mail__c/validationRules/If_Insured_Require_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Insured_Require_Value</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Insurance__c = TRUE , ISNULL(Value__c) )</errorConditionFormula>
    <errorDisplayField>Insurance__c</errorDisplayField>
    <errorMessage>If the package is insured, it must be given a value for potential payouts.</errorMessage>
</ValidationRule>