force-app/main/default/objects/Mail__c/validationRules/Insurance_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Insurance_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Insurance__c == True,  ISNULL(Value__c))</errorConditionFormula>
    <errorMessage>If you would like insurance on your package, you must enter a monetary value for your package.</errorMessage>
</ValidationRule>