force-app/main/default/objects/Mail__c/validationRules/Only_Admins.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Admins</fullName>
    <active>true</active>
    <description>Only admins can change Mail name</description>
    <errorConditionFormula>$User.ProfileId &lt;&gt; &apos;System Administrator&apos; &amp;&amp; ISCHANGED(Name)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Only System Admins can change Mail name.</errorMessage>
</ValidationRule>