force-app/main/default/objects/Mail__c/validationRules/Prevent_Rename.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Rename</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISCHANGED( Name ) ,( $UserRole.Name &lt;&gt; &apos;Postal Service Admin&apos;))</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Insufficient permissions to rename object.</errorMessage>
</ValidationRule>