force-app/main/default/objects/Mail__c/listViews/Approval_for_Insurance_Mail.listView-meta.xml
<ListView>
    <fullName>Approval_for_Insurance_Mail</fullName>
    <filterScope>Queue</filterScope>
    <label>Approval for Insurance</label>
    <queue>Approval_for_Insurance</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>