force-app/main/default/objects/Mail__c/listViews/Insurance_Payout_Level_2_Mail.listView-meta.xml
<ListView>
    <fullName>Insurance_Payout_Level_2_Mail</fullName>
    <filterScope>Queue</filterScope>
    <label>Insurance Payout Level 2</label>
    <queue>Insurance_Payout_Level_2</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>