force-app/main/default/objects/Mail__c/listViews/Package_Insurance_Mail.listView-meta.xml
<ListView>
    <fullName>Package_Insurance_Mail</fullName>
    <filterScope>Queue</filterScope>
    <label>Package Insurance</label>
    <queue>Package_Insurance</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>