force-app/main/default/objects/Mail__c/listViews/Payout_Package_Approvers_Mail.listView-meta.xml
<ListView>
    <fullName>Payout_Package_Approvers_Mail</fullName>
    <filterScope>Queue</filterScope>
    <label>Payout Package Approvers</label>
    <queue>Payout_Package_Approvers</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>